--- a/templates/clients.html
+++ b/templates/clients.html
@@ -3,15 +3,31 @@
         <h1 class="header">Нам доверяют</h1>
 
         <div class="partners_list">
-            <div class="partner_card" style="background-image: url(/static/imgs/partner_flyarystan.png)"></div>
-            <div class="partner_card" style="background-image: url(/static/imgs/partner_bcc.png)"></div>
-            <div class="partner_card" style="background-image: url(/static/imgs/partner_evrika.png)"></div>
-            <div class="partner_card" style="background-image: url(/static/imgs/partner_kaspi.png)"></div>
+            <div class="partner_card">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/9/9d/Arbuz_logo.svg" alt="Arbuz">
+            </div>
+            <div class="partner_card">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/KFC_logo.svg" alt="KFC">
+            </div>
+            <div class="partner_card">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/0/08/Coca-Cola_logo.svg" alt="Coca-Cola">
+            </div>
+            <div class="partner_card">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Amazon_logo.svg" alt="Amazon">
+            </div>
 
-            <div class="partner_card" style="background-image: url(/static/imgs/partner_dostyk.png)"></div>
-            <div class="partner_card" style="background-image: url(/static/imgs/partner_alter.png)"></div>
-            <div class="partner_card" style="background-image: url(/static/imgs/partner_yandex.png)"></div>
-            <div class="partner_card" style="background-image: url(/static/imgs/partner_capital_city.png)"></div>
+            <div class="partner_card">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/a/ab/Logo_TV_2015.png" alt="TV">
+            </div>
+            <div class="partner_card">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/4/44/Microsoft_logo.svg" alt="Microsoft">
+            </div>
+            <div class="partner_card">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/IBM_logo.svg" alt="IBM">
+            </div>
+            <div class="partner_card">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/f/fa/Apple_logo_black.svg" alt="Apple">
+            </div>
         </div>
     </div>
 </div>
