--- a/templates/clients.html
+++ b/templates/clients.html
@@ -3,15 +3,31 @@
         <h1 class="header">Нам доверяют</h1>
 
         <div class="partners_list">
-            <div class="partner_card" style="background-image: url(/static/imgs/partner_flyarystan.png)"></div>
-            <div class="partner_card" style="background-image: url(/static/imgs/partner_bcc.png)"></div>
-            <div class="partner_card" style="background-image: url(/static/imgs/partner_evrika.png)"></div>
-            <div class="partner_card" style="background-image: url(/static/imgs/partner_kaspi.png)"></div>
+            <div class="partner_card">
+                <img src="/static/imgs/partner_flyarystan.png" alt="FlyArystan">
+            </div>
+            <div class="partner_card">
+                <img src="/static/imgs/partner_bcc.png" alt="BCC">
+            </div>
+            <div class="partner_card">
+                <img src="/static/imgs/partner_evrika.png" alt="Evrika">
+            </div>
+            <div class="partner_card">
+                <img src="/static/imgs/partner_kaspi.png" alt="Kaspi">
+            </div>
 
-            <div class="partner_card" style="background-image: url(/static/imgs/partner_dostyk.png)"></div>
-            <div class="partner_card" style="background-image: url(/static/imgs/partner_alter.png)"></div>
-            <div class="partner_card" style="background-image: url(/static/imgs/partner_yandex.png)"></div>
-            <div class="partner_card" style="background-image: url(/static/imgs/partner_capital_city.png)"></div>
+            <div class="partner_card">
+                <img src="/static/imgs/partner_dostyk.png" alt="Dostyk">
+            </div>
+            <div class="partner_card">
+                <img src="/static/imgs/partner_alter.png" alt="Altel">
+            </div>
+            <div class="partner_card">
+                <img src="/static/imgs/partner_yandex.png" alt="Yandex">
+            </div>
+            <div class="partner_card">
+                <img src="/static/imgs/partner_capital_city.png" alt="Capital City">
+            </div>
         </div>
     </div>
 </div>
