Add store navigation and refresh main page layout

--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -86,17 +86,16 @@
     <div class="block">
         <div class="container products_info">
             <div class="shop_header">
-                <h2>Наш магазин</h2>
+                <div>
+                    <h2>Наш магазин</h2>
+                    <p>Подборка популярной оргтехники из каталога.</p>
+                </div>
+                <a class="shop_cta" href="/store/">Перейти в магазин</a>
             </div>
 
             <div class="shop_showcase">
                 {% include 'products.html' %}
             </div>
-
-            <div class="shop_showcase">
-                {% include 'products.html' %}
-            </div>
-            {% include 'services.html' %}
         </div>
     </div>
 
