Polish homepage stats, logos, and forms

--- a/templates/clients.html
+++ b/templates/clients.html
@@ -28,6 +28,9 @@
             <div class="partner_card">
                 <img src="/static/imgs/partner_capital_city.png" alt="Capital City">
             </div>
+            <div class="partner_card">
+                <img src="/static/imgs/partner_bi_group.png" alt="BI Group">
+            </div>
         </div>
     </div>
 </div>
