--- a/templates/clients.html
+++ b/templates/clients.html
@@ -3,31 +3,41 @@
         <h1 class="header">Нам доверяют</h1>
 
         <div class="partners_list">
-            <div class="partner_card">
-                <img src="/static/imgs/partner_flyarystan.png" alt="FlyArystan">
-            </div>
-            <div class="partner_card">
-                <img src="/static/imgs/partner_bcc.png" alt="BCC">
-            </div>
-            <div class="partner_card">
-                <img src="/static/imgs/partner_evrika.png" alt="Evrika">
-            </div>
-            <div class="partner_card">
-                <img src="/static/imgs/partner_kaspi.png" alt="Kaspi">
-            </div>
-
-            <div class="partner_card">
-                <img src="/static/imgs/partner_dostyk.png" alt="Dostyk">
-            </div>
-            <div class="partner_card">
-                <img src="/static/imgs/partner_alter.png" alt="Altel">
-            </div>
-            <div class="partner_card">
-                <img src="/static/imgs/partner_yandex.png" alt="Yandex">
-            </div>
-            <div class="partner_card">
-                <img src="/static/imgs/partner_capital_city.png" alt="Capital City">
-            </div>
+            {% if partner_logos %}
+                {% for logo in partner_logos %}
+                <div class="partner_card">
+                    <img src="{{ logo.logo.url }}" alt="{{ logo.name|default:'Partner logo' }}">
+                </div>
+                {% endfor %}
+            {% else %}
+                <div class="partner_card">
+                    <img src="/static/imgs/partner_flyarystan.png" alt="FlyArystan">
+                </div>
+                <div class="partner_card">
+                    <img src="/static/imgs/partner_bcc.png" alt="BCC">
+                </div>
+                <div class="partner_card">
+                    <img src="/static/imgs/partner_evrika.png" alt="Evrika">
+                </div>
+                <div class="partner_card">
+                    <img src="/static/imgs/partner_kaspi.png" alt="Kaspi">
+                </div>
+                <div class="partner_card">
+                    <img src="/static/imgs/partner_dostyk.png" alt="Dostyk">
+                </div>
+                <div class="partner_card">
+                    <img src="/static/imgs/partner_alter.png" alt="Altel">
+                </div>
+                <div class="partner_card">
+                    <img src="/static/imgs/partner_yandex.png" alt="Yandex">
+                </div>
+                <div class="partner_card">
+                    <img src="/static/imgs/partner_capital_city.png" alt="Capital City">
+                </div>
+                <div class="partner_card">
+                    <img src="/static/imgs/partner_bi_group.png" alt="BI Group">
+                </div>
+            {% endif %}
         </div>
     </div>
 </div>
