Refresh product page layout with tabs

--- a/templates/product_page.html
+++ b/templates/product_page.html
@@ -9,27 +9,55 @@
 
 <div class="block">
     <div class="container product_info">
-        <h1>{{ product.name }}</h1>
+        <div class="product_header">
+            <div>
+                <p class="product_meta">Категория: {{ product.category }}</p>
+                <h1>{{ product.name }}</h1>
+            </div>
+            <div class="product_price">
+                <span>{{ product.price|intcomma }} тг</span>
+                <button onclick="open_buy_form({{ product.id }}, '{{ product.name }}', '{{ product.poster }}', '{{ product.price }}', '{{ product.code }}')">Купить</button>
+            </div>
+        </div>
 
         <div class="more_info">
             <div class="product_image" style="background-image: url({{ product.poster }})"></div>
 
             <div class="text">
-                <h2>О товаре</h2>
-                <p><b>Категория:</b> {{ product.category }}</p>
-                <p><b>Код товара:</b> {{ product.code }}</p>
-                <p><b>Бренд:</b> {{ product.brand }}</p>
-                <p class="characteristics_title"><b>Характеристики:</b></p>
-
-                <div class="description" style="margin-top: 5px;">
-                    {% autoescape off %}
-                    {{ product.description }}
-                    {% endautoescape %}
+                <div class="product_tabs">
+                    <button class="tab_button active" data-tab="details">Описание</button>
+                    <button class="tab_button" data-tab="specs">Характеристики</button>
                 </div>
 
-                <div class="buy">
-                    <button onclick="open_buy_form({{ product.id }}, '{{ product.name }}', '{{ product.poster }}', '{{ product.price }}', '{{ product.code }}')">Купить</button>
-                    <h2>{{ product.price|intcomma }} тг</h2>
+                <div class="tab_panel active" data-tab-panel="details">
+                    <p><b>Код товара:</b> {{ product.code }}</p>
+                    <p><b>Бренд:</b> {{ product.brand }}</p>
+                    <div class="description">
+                        {% autoescape off %}
+                        {{ product.description }}
+                        {% endautoescape %}
+                    </div>
+                </div>
+
+                <div class="tab_panel" data-tab-panel="specs">
+                    <div class="specs_grid">
+                        <div>
+                            <span>Категория</span>
+                            <strong>{{ product.category }}</strong>
+                        </div>
+                        <div>
+                            <span>Бренд</span>
+                            <strong>{{ product.brand }}</strong>
+                        </div>
+                        <div>
+                            <span>Код товара</span>
+                            <strong>{{ product.code }}</strong>
+                        </div>
+                        <div>
+                            <span>Стоимость</span>
+                            <strong>{{ product.price|intcomma }} тг</strong>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
