--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -6,7 +6,7 @@
 <span style="display: none" id="page_title">Grace Agency</span>
 <button style="display: none" onclick="main_page_loaded()" id="page_loaded_js_function"></button>
 
-<div class="block hero-block">
+<div class="block hero-block section-block section-block--muted">
     <div class="container hero">
         <div class="hero__content">
             <p class="hero__eyebrow">Рекламное агентство полного цикла</p>
@@ -50,7 +50,7 @@
 
 
 <div class="after_main_page_info">
-    <div class="block">
+    <div class="block section-block">
         <div class="container advantages">
             <div class="advantages__header">
                 <h2>Почему выбирают Grace Agency</h2>
@@ -73,7 +73,7 @@
         </div>
     </div>
 
-    <div class="block">
+    <div class="block section-block">
         <div class="container services_info">
             <div class="section_title">
                 <h2>Портфолио услуг рекламного агентства</h2>
@@ -83,7 +83,7 @@
         </div>
     </div>
 
-    <div class="block">
+    <div class="block section-block section-block--muted">
         <div class="container products_info">
             <div class="shop_header">
                 <div>
