--- a/templates/store_page.html
+++ b/templates/store_page.html
@@ -7,7 +7,7 @@
 <button style="display: none" onclick="store_page_loaded()" id="page_loaded_js_function"></button>
 
 
-<div class="block store_page">
+<div class="block store_page section-block">
     <div class="container products_info">
         <details class="filter_details open_details" data-open="true" open>
             <summary><span>Фильтр</span><img src="/static/imgs/details.png" alt=""></summary>
