--- a/static/css/media_product_page.css
+++ b/static/css/media_product_page.css
@@ -1,12 +1,36 @@
 @media(max-width: 1150px) {
     .product_info .more_info .product_image {
         min-width: 250px;
-        height: 300px;
+        height: 320px;
     }
 }
 
 @media(max-width: 900px) {
+    .product_info .product_heading {
+        align-items: flex-start;
+    }
+
     .product_info .more_info {
         flex-direction: column;
+    }
+
+    .product_info .product_price {
+        width: 100%;
+    }
+}
+
+@media(max-width: 630px) {
+    .product_info .more_info .product_image {
+        min-width: 100%;
+        height: 280px;
+    }
+
+    .product_info .more_info .text .buy {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .product_info .more_info .text .buy .primary_btn {
+        width: 100%;
     }
 }
